--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
     />
 
-    <title>Portfolio - John Doe</title>
+    <title>Raevandhani</title>
 
   </head>
   <body class="bg-gray-50 dark:bg-gray-900 font-poppins transition-colors duration-300">
