--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="container mx-auto px-6 py-4">
         <div class="flex justify-between items-center">
           <div class="text-2xl font-bold text-indigo-600 dark:text-indigo-400">
-            <span class="text-gray-800 dark:text-gray-200">John</span>Doe
+            <span class="text-gray-800 dark:text-gray-200">Raevan</span>dhani
           </div>
     
           <!-- Desktop Menu -->
@@ -71,17 +71,17 @@
     <!-- Hero Section -->
     <section id="home" class="min-h-screen flex items-center pt-20 bg-gray-50 dark:bg-gray-900">
       <div class="container mx-auto px-6">
-        <div class="flex flex-col md:flex-row items-center">
+        <div class="flex flex-col md:flex-row items-center justify-between px-40">
           <div class="md:w-1/2 mb-10 md:mb-0">
             <h1 class="text-4xl md:text-5xl font-bold text-gray-800 dark:text-gray-100 mb-4">
-              Hi, I'm <span class="text-indigo-600 dark:text-indigo-400">John Doe</span>
+              Hi, I'm <span class="text-indigo-600 dark:text-indigo-400">Raevandhani</span>
             </h1>
             <h2 class="text-2xl md:text-3xl font-semibold text-gray-700 dark:text-gray-300 mb-6">
-              Full Stack Developer
+              Developer
             </h2>
-            <p class="text-gray-600 dark:text-gray-400 mb-8 leading-relaxed">
+            <p class="text-gray-600 dark:text-gray-400 mb-8 leading-relaxed text-sm">
               I'm passionate about creating beautiful, functional web applications that solve real-world problems. 
-              With expertise in modern web technologies, I bring ideas to life through clean code and thoughtful design.
+              With expertise in modern web technologies, I bring innovative ideas to life through clean code and thoughtful design.
             </p>
             <div class="flex flex-wrap gap-4">
               <a href="#contact" class="px-8 py-3 bg-indigo-600 dark:bg-indigo-500 text-white rounded-full hover:bg-indigo-700 dark:hover:bg-indigo-600 transition-colors duration-300">
@@ -92,34 +92,29 @@
               </a>
             </div>
             <div class="flex space-x-4 mt-8">
-              <a href="#" class="text-gray-600 dark:text-gray-400 hover:text-indigo-600 dark:hover:text-indigo-400 transition-colors duration-300">
+              <a href="https://github.com/Raevandhani" class="text-gray-600 dark:text-gray-400 hover:text-indigo-600 dark:hover:text-indigo-400 transition-colors duration-300">
                 <i class="ri-github-fill text-2xl"></i>
               </a>
-              <a href="#" class="text-gray-600 dark:text-gray-400 hover:text-indigo-600 dark:hover:text-indigo-400 transition-colors duration-300">
+              <a href="https://www.linkedin.com/in/raevandhanifattan" class="text-gray-600 dark:text-gray-400 hover:text-indigo-600 dark:hover:text-indigo-400 transition-colors duration-300">
                 <i class="ri-linkedin-box-fill text-2xl"></i>
               </a>
               <a href="#" class="text-gray-600 dark:text-gray-400 hover:text-indigo-600 dark:hover:text-indigo-400 transition-colors duration-300">
-                <i class="ri-twitter-fill text-2xl"></i>
+                <i class="ri-instagram-fill text-2xl"></i>
               </a>
               <a href="#" class="text-gray-600 dark:text-gray-400 hover:text-indigo-600 dark:hover:text-indigo-400 transition-colors duration-300">
-                <i class="ri-dribbble-line text-2xl"></i>
+                <i class="ri-whatsapp-line text-2xl"></i>
               </a>
             </div>
           </div>
-          <div class="md:w-1/2 flex justify-center">
+
+          <div class="flex items-center justify-center">
             <div class="relative">
               <div class="w-64 h-64 md:w-80 md:h-80 rounded-full overflow-hidden border-4 border-indigo-100 dark:border-indigo-900 shadow-xl">
-                <img src="https://picsum.photos/seed/profile123/800/800.jpg" alt="Profile" class="w-full h-full object-cover">
+                <img src="assets/hong-kong.jpeg" alt="Profile" class="w-full h-full object-cover">
               </div>
-              <div class="absolute -bottom-4 -right-4 bg-white dark:bg-gray-800 p-4 rounded-lg shadow-lg">
-                <div class="flex items-center">
-                  <div class="w-12 h-12 bg-indigo-100 dark:bg-indigo-900 rounded-full flex items-center justify-center mr-3">
-                    <i class="ri-code-s-slash-line text-indigo-600 dark:text-indigo-400 text-xl"></i>
-                  </div>
-                  <div>
-                    <p class="text-sm text-gray-500 dark:text-gray-400">Experience</p>
-                    <p class="font-semibold text-gray-800 dark:text-gray-200">5+ Years</p>
-                  </div>
+              <div class="absolute bottom-3 right-6 bg-white dark:bg-gray-800 p-4 rounded-lg shadow-lg">
+                <div class="w-12 h-12 bg-indigo-100 dark:bg-indigo-900 rounded-full flex items-center justify-center">
+                  <i class="ri-code-s-slash-line text-indigo-600 dark:text-indigo-400 text-xl"></i>
                 </div>
               </div>
             </div>
