--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <i class="ri-instagram-fill text-2xl"></i>
               </a>
               <a href="#" class="text-gray-600 dark:text-gray-400 hover:text-indigo-600 dark:hover:text-indigo-400 transition-colors duration-300">
-                <i class="ri-whatsapp-line text-2xl"></i>
+                <i class="ri-discord-fill text-2xl"></i>
               </a>
             </div>
           </div>
@@ -254,7 +254,7 @@
             </div>
             <span class="text-sm font-medium text-gray-700 dark:text-gray-300">Git</span>
           </div>
-          
+           
           <!-- Figma -->
           <div class="flex flex-col items-center group">
             <div class="w-20 h-20 bg-white dark:bg-gray-800 rounded-lg shadow-md flex items-center justify-center mb-3 group-hover:shadow-xl transition-all duration-300 group-hover:-translate-y-2">
@@ -407,9 +407,9 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
               <div>
                 <h3 class="text-xl font-semibold mb-6 text-gray-800 dark:text-gray-200">Let's Connect</h3>
-                <p class="text-gray-600 dark:text-gray-400 mb-6">
+                <p class="text-gray-600 dark:text-gray-400 mb-6 text-sm w-2/3">
                   I'm always interested in hearing about new projects and opportunities. 
-                  Whether you have a question or just want to say hi, feel free to get in touch!
+                  Whether you have a question or just want to say hi, feel free to get touched!
                 </p>
                 <div class="space-y-4">
                   <div class="flex items-center">
@@ -418,7 +418,7 @@
                     </div>
                     <div>
                       <p class="text-sm text-gray-500 dark:text-gray-400">Location</p>
-                      <p class="font-medium text-gray-800 dark:text-gray-200">San Francisco, CA</p>
+                      <p class="font-medium text-gray-800 dark:text-gray-200">Bogor, Indonesia</p>
                     </div>
                   </div>
                   <div class="flex items-center">
@@ -427,7 +427,7 @@
                     </div>
                     <div>
                       <p class="text-sm text-gray-500 dark:text-gray-400">Email</p>
-                      <p class="font-medium text-gray-800 dark:text-gray-200">john@example.com</p>
+                      <p class="font-medium text-gray-800 dark:text-gray-200">raevandhani@gmail.com</p>
                     </div>
                   </div>
                   <div class="flex items-center">
@@ -436,22 +436,22 @@
                     </div>
                     <div>
                       <p class="text-sm text-gray-500 dark:text-gray-400">Phone</p>
-                      <p class="font-medium text-gray-800 dark:text-gray-200">+1 (555) 123-4567</p>
+                      <p class="font-medium text-gray-800 dark:text-gray-200">+62 888-0131-7841</p>
                     </div>
                   </div>
                 </div>
                 <div class="flex space-x-4 mt-8">
-                  <a href="#" class="w-10 h-10 bg-gray-200 dark:bg-gray-700 rounded-full flex items-center justify-center text-gray-700 dark:text-gray-300 hover:bg-indigo-600 dark:hover:bg-indigo-500 hover:text-white transition-colors duration-300">
+                  <a href="https://github.com/Raevandhani" class="w-10 h-10 bg-gray-200 dark:bg-gray-700 rounded-full flex items-center justify-center text-gray-700 dark:text-gray-300 hover:bg-indigo-600 dark:hover:bg-indigo-500 hover:text-white transition-colors duration-300">
                     <i class="ri-github-fill"></i>
                   </a>
-                  <a href="#" class="w-10 h-10 bg-gray-200 dark:bg-gray-700 rounded-full flex items-center justify-center text-gray-700 dark:text-gray-300 hover:bg-indigo-600 dark:hover:bg-indigo-500 hover:text-white transition-colors duration-300">
+                  <a href="https://www.linkedin.com/in/raevandhanifattan" class="w-10 h-10 bg-gray-200 dark:bg-gray-700 rounded-full flex items-center justify-center text-gray-700 dark:text-gray-300 hover:bg-indigo-600 dark:hover:bg-indigo-500 hover:text-white transition-colors duration-300">
                     <i class="ri-linkedin-box-fill"></i>
                   </a>
                   <a href="#" class="w-10 h-10 bg-gray-200 dark:bg-gray-700 rounded-full flex items-center justify-center text-gray-700 dark:text-gray-300 hover:bg-indigo-600 dark:hover:bg-indigo-500 hover:text-white transition-colors duration-300">
-                    <i class="ri-twitter-fill"></i>
+                    <i class="ri-instagram-fill"></i>
                   </a>
                   <a href="#" class="w-10 h-10 bg-gray-200 dark:bg-gray-700 rounded-full flex items-center justify-center text-gray-700 dark:text-gray-300 hover:bg-indigo-600 dark:hover:bg-indigo-500 hover:text-white transition-colors duration-300">
-                    <i class="ri-dribbble-line"></i>
+                    <i class="ri-discord-fill"></i>
                   </a>
                 </div>
               </div>
@@ -489,13 +489,13 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-gray-900 dark:bg-black text-white py-8">
+    <footer class="bg-gray-900 dark:bg-black text-white py-2">
       <div class="container mx-auto px-6">
         <div class="flex flex-col md:flex-row justify-between items-center">
-          <div class="mb-4 md:mb-0">
+          <div class="mb-4 md:mb-0 text-xs">
             <p>&copy; 2023 John Doe. All rights reserved.</p>
           </div>
-          <div class="flex space-x-6">
+          <div class="flex space-x-6 text-sm">
             <a href="#home" class="hover:text-indigo-400 transition-colors duration-300">Home</a>
             <a href="#about" class="hover:text-indigo-400 transition-colors duration-300">About</a>
             <a href="#skills" class="hover:text-indigo-400 transition-colors duration-300">Skills</a>
