--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <p class="font-semibold text-gray-800 dark:text-gray-200 text-sm">Bogor, Indonesia</p>
               </div>
             </div>
-            <a href="/public/CV_Raevandhani.pdf" download="CV_Raevandhani.pdf" class="inline-flex items-center text-indigo-600 dark:text-indigo-400 hover:text-indigo-700 dark:hover:text-indigo-300 transition-colors duration-300 hover:underline">
+            <a href="CV_Raevandhani.pdf" download="CV_Raevandhani.pdf" class="inline-flex items-center text-indigo-600 dark:text-indigo-400 hover:text-indigo-700 dark:hover:text-indigo-300 transition-colors duration-300 hover:underline">
               <span>Download CV</span>
               <i class="ri-download-line ml-2"></i>
             </a>  
