--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <p class="font-semibold text-gray-800 dark:text-gray-200 text-sm">Bogor, Indonesia</p>
               </div>
             </div>
-            <a href="CV_Raevandhani.pdf" download="CV_Raevandhani.pdf" class="inline-flex items-center text-indigo-600 dark:text-indigo-400 hover:text-indigo-700 dark:hover:text-indigo-300 transition-colors duration-300 hover:underline">
+            <a href="downloads/CV_Raevandhani.pdf" download="CV_Raevandhani.pdf" class="inline-flex items-center text-indigo-600 dark:text-indigo-400 hover:text-indigo-700 dark:hover:text-indigo-300 transition-colors duration-300 hover:underline">
               <span>Download CV</span>
               <i class="ri-download-line ml-2"></i>
             </a>  
@@ -389,8 +389,8 @@
           <div class="bg-white dark:bg-gray-800 rounded-lg shadow-lg p-8">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
               <div>
-                <h3 class="text-xl font-semibold mb-6 text-gray-800 dark:text-gray-200">Let's Connect</h3>
-                <p class="text-gray-600 dark:text-gray-400 mb-6 text-sm w-2/3">
+                <h3 class="text-xl font-semibold mb-5 text-gray-800 dark:text-gray-200">Let's Connect</h3>
+                <p class="text-gray-600 dark:text-gray-400 mb-5 text-sm w-2/3 text-justify">
                   I'm always interested in hearing about new projects and opportunities. 
                   Whether you have a question or just want to say hi, feel free to get touched!
                 </p>
@@ -400,8 +400,8 @@
                       <i class="ri-map-pin-line text-indigo-600 dark:text-indigo-400"></i>
                     </div>
                     <div>
-                      <p class="text-sm text-gray-500 dark:text-gray-400">Location</p>
-                      <p class="font-medium text-gray-800 dark:text-gray-200">Bogor, Indonesia</p>
+                      <p class="text-xs text-gray-500 dark:text-gray-400">Location</p>
+                      <p class="text-sm font-medium text-gray-800 dark:text-gray-200">Bogor, Indonesia</p>
                     </div>
                   </div>
                   <div class="flex items-center">
@@ -409,8 +409,8 @@
                       <i class="ri-mail-line text-indigo-600 dark:text-indigo-400"></i>
                     </div>
                     <div>
-                      <p class="text-sm text-gray-500 dark:text-gray-400">Email</p>
-                      <p class="font-medium text-gray-800 dark:text-gray-200">raevandhani@gmail.com</p>
+                      <p class="text-xs text-gray-500 dark:text-gray-400">Email</p>
+                      <p class="text-sm font-medium text-gray-800 dark:text-gray-200">raevandhani@gmail.com</p>
                     </div>
                   </div>
                   <div class="flex items-center">
@@ -418,8 +418,8 @@
                       <i class="ri-phone-line text-indigo-600 dark:text-indigo-400"></i>
                     </div>
                     <div>
-                      <p class="text-sm text-gray-500 dark:text-gray-400">Phone</p>
-                      <p class="font-medium text-gray-800 dark:text-gray-200">+62 888-0131-7841</p>
+                      <p class="text-xs text-gray-500 dark:text-gray-400">Phone</p>
+                      <p class="text-sm font-medium text-gray-800 dark:text-gray-200">+62 888-0131-7841</p>
                     </div>
                   </div>
                 </div>
@@ -430,11 +430,11 @@
                   <a href="https://www.linkedin.com/in/raevandhanifattan" class="w-10 h-10 bg-gray-200 dark:bg-gray-700 rounded-full flex items-center justify-center text-gray-700 dark:text-gray-300 hover:bg-indigo-600 dark:hover:bg-indigo-500 hover:text-white transition-colors duration-300">
                     <i class="ri-linkedin-box-fill"></i>
                   </a>
-                  <a href="#" class="w-10 h-10 bg-gray-200 dark:bg-gray-700 rounded-full flex items-center justify-center text-gray-700 dark:text-gray-300 hover:bg-indigo-600 dark:hover:bg-indigo-500 hover:text-white transition-colors duration-300">
+                  <a href="" class="w-10 h-10 bg-gray-200 dark:bg-gray-700 rounded-full flex items-center justify-center text-gray-700 dark:text-gray-300 hover:bg-indigo-600 dark:hover:bg-indigo-500 hover:text-white transition-colors duration-300">
                     <i class="ri-instagram-fill"></i>
                   </a>
-                  <a href="#" class="w-10 h-10 bg-gray-200 dark:bg-gray-700 rounded-full flex items-center justify-center text-gray-700 dark:text-gray-300 hover:bg-indigo-600 dark:hover:bg-indigo-500 hover:text-white transition-colors duration-300">
-                    <i class="ri-discord-fill"></i>
+                  <a href="https://wa.me/6288801317841" class="w-10 h-10 bg-gray-200 dark:bg-gray-700 rounded-full flex items-center justify-center text-gray-700 dark:text-gray-300 hover:bg-indigo-600 dark:hover:bg-indigo-500 hover:text-white transition-colors duration-300">
+                    <i class="ri-whatsapp-fill"></i>
                   </a>
                 </div>
               </div>
@@ -470,24 +470,6 @@
         </div>
       </div>
     </section>
-
-    <!-- Footer -->
-    <footer class="bg-gray-900 dark:bg-black text-white py-2">
-      <div class="container mx-auto px-6">
-        <div class="flex flex-col md:flex-row justify-between items-center">
-          <div class="mb-4 md:mb-0 text-xs">
-            <p>&copy; 2023 John Doe. All rights reserved.</p>
-          </div>
-          <div class="flex space-x-6 text-sm">
-            <a href="#home" class="hover:text-indigo-400 transition-colors duration-300">Home</a>
-            <a href="#about" class="hover:text-indigo-400 transition-colors duration-300">About</a>
-            <a href="#skills" class="hover:text-indigo-400 transition-colors duration-300">Skills</a>
-            <a href="#projects" class="hover:text-indigo-400 transition-colors duration-300">Projects</a>
-            <a href="#contact" class="hover:text-indigo-400 transition-colors duration-300">Contact</a>
-          </div>
-        </div>
-      </div>
-    </footer>
 
     <!-- Back to Top Button -->
     <button id="backToTop" class="fixed bottom-8 right-8 w-12 h-12 bg-indigo-600 dark:bg-indigo-500 text-white rounded-full shadow-lg flex items-center justify-center opacity-0 invisible transition-all duration-300 hover:bg-indigo-700 dark:hover:bg-indigo-600 z-40">
