--- a/index.html
+++ b/index.html
@@ -440,29 +440,26 @@
               </div>
               <div>
                 <h3 class="text-xl font-semibold mb-6 text-gray-800 dark:text-gray-200">Send Me a Message</h3>
-                <form x-data="{ name: '', email: '', subject: '', message: '', submitted: false }" @submit.prevent="submitted = true">
+                <form action="https://formsubmit.co/raevandhanifattan@gmail.com" method="POST">
                   <div class="mb-4">
-                    <label for="name" class="block text-gray-700 dark:text-gray-300 mb-2">Your Name</label>
-                    <input type="text" id="name" x-model="name" class="w-full px-4 py-2 border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 text-gray-800 dark:text-gray-200 rounded-lg focus:outline-none focus:border-indigo-500 dark:focus:border-indigo-400" required>
+                    <label for="name" class="block text-gray-700 dark:text-gray-300 mb-2 text-sm">Your Name</label>
+                    <input type="text" id="name" name="name" class="text-sm w-full px-3 py-2 border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 text-gray-800 dark:text-gray-200 rounded-lg focus:outline-none focus:border-indigo-500 dark:focus:border-indigo-400" required>
                   </div>
                   <div class="mb-4">
-                    <label for="email" class="block text-gray-700 dark:text-gray-300 mb-2">Your Email</label>
-                    <input type="email" id="email" x-model="email" class="w-full px-4 py-2 border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 text-gray-800 dark:text-gray-200 rounded-lg focus:outline-none focus:border-indigo-500 dark:focus:border-indigo-400" required>
+                    <label for="email" class="block text-gray-700 dark:text-gray-300 mb-2 text-sm">Your Email</label>
+                    <input type="email" id="email" name="email" class="text-sm w-full px-3 py-2 border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 text-gray-800 dark:text-gray-200 rounded-lg focus:outline-none focus:border-indigo-500 dark:focus:border-indigo-400" required>
                   </div>
                   <div class="mb-4">
-                    <label for="subject" class="block text-gray-700 dark:text-gray-300 mb-2">Subject</label>
-                    <input type="text" id="subject" x-model="subject" class="w-full px-4 py-2 border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 text-gray-800 dark:text-gray-200 rounded-lg focus:outline-none focus:border-indigo-500 dark:focus:border-indigo-400" required>
+                    <label for="subject" class="block text-gray-700 dark:text-gray-300 mb-2 text-sm">Subject</label>
+                    <input type="text" id="subject" name="subject" class="text-sm w-full px-3 py-2 border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 text-gray-800 dark:text-gray-200 rounded-lg focus:outline-none focus:border-indigo-500 dark:focus:border-indigo-400" required>
                   </div>
                   <div class="mb-6">
-                    <label for="message" class="block text-gray-700 dark:text-gray-300 mb-2">Message</label>
-                    <textarea id="message" rows="4" x-model="message" class="w-full px-4 py-2 border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 text-gray-800 dark:text-gray-200 rounded-lg focus:outline-none focus:border-indigo-500 dark:focus:border-indigo-400" required></textarea>
+                    <label for="message" class="block text-gray-700 dark:text-gray-300 mb-2 text-sm">Message</label>
+                    <textarea id="message" rows="4" name="msg" class="text-sm w-full px-3 py-2 border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 text-gray-800 dark:text-gray-200 rounded-lg focus:outline-none focus:border-indigo-500 dark:focus:border-indigo-400" required></textarea>
                   </div>
-                  <button type="submit" class="w-full px-6 py-3 bg-indigo-600 dark:bg-indigo-500 text-white rounded-lg hover:bg-indigo-700 dark:hover:bg-indigo-600 transition-colors duration-300">
+                  <button type="submit" class="text-sm w-full px-6 py-3 bg-indigo-600 dark:bg-indigo-500 text-white rounded-lg hover:bg-indigo-700 dark:hover:bg-indigo-600 transition-colors duration-300">
                     Send Message
                   </button>
-                  <div x-show="submitted" x-transition class="mt-4 p-4 bg-green-100 dark:bg-green-900 text-green-700 dark:text-green-300 rounded-lg">
-                    Thank you for your message! I'll get back to you soon.
-                  </div>
                 </form>
               </div>
             </div>
