--- a/index.html
+++ b/index.html
@@ -460,6 +460,7 @@
 
                   <!-- FormSubmit Extra -->
                   <input type="hidden" name="_cc" value="raevandhanifattan.itxpro@email.com">
+                  <input type="hidden" name="_template" value="table">
 
                   <button type="submit" class="text-sm w-full px-6 py-3 bg-indigo-600 dark:bg-indigo-500 text-white rounded-lg hover:bg-indigo-700 dark:hover:bg-indigo-600 transition-colors duration-300">
                     Send Message
