--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a href="#about" class="nav-link text-gray-700 dark:text-gray-300 hover:text-indigo-600 dark:hover:text-indigo-500 transition-colors duration-300 hover:underline">About</a>
             <a href="#skills" class="nav-link text-gray-700 dark:text-gray-300 hover:text-indigo-600 dark:hover:text-indigo-500 transition-colors duration-300 hover:underline">Skills</a>
             <a href="#projects" class="nav-link text-gray-700 dark:text-gray-300 hover:text-indigo-600 dark:hover:text-indigo-500 transition-colors duration-300 hover:underline">Projects</a>
-            <a href="#achievements" class="nav-link text-gray-700 dark:text-gray-300 hover:text-indigo-600 dark:hover:text-indigo-500 transition-colors duration-300 hover:underline">Achievements</a>
+            <a href="views/achievements.html" class="nav-link text-gray-700 dark:text-gray-300 hover:text-indigo-600 dark:hover:text-indigo-500 transition-colors duration-300 hover:underline">Achievements</a>
             <a href="#contact" class="nav-link text-gray-700 dark:text-gray-300 hover:text-indigo-600 dark:hover:text-indigo-500 transition-colors duration-300 hover:underline">Contact</a>
           </div>
           
@@ -101,16 +101,20 @@
               </a>
             </div>
             <div class="flex space-x-4 mt-5 lg:mt-6 xl:mt-8">
-              <a href="https://github.com/Raevandhani" class="text-gray-600 dark:text-gray-400 hover:text-indigo-600 dark:hover:text-indigo-400 transition-colors duration-300">
+              <a href="https://github.com/Raevandhani" target="_blank" rel="noopener noreferrer"
+                 class="text-gray-600 dark:text-gray-400 hover:text-indigo-600 dark:hover:text-indigo-400 transition-colors duration-300">
                 <i class="ri-github-fill text-2xl"></i>
               </a>
-              <a href="https://www.linkedin.com/in/raevandhanifattan" class="text-gray-600 dark:text-gray-400 hover:text-indigo-600 dark:hover:text-indigo-400 transition-colors duration-300">
+              <a href="https://www.linkedin.com/in/raevandhanifattan" target="_blank" rel="noopener noreferrer"
+                 class="text-gray-600 dark:text-gray-400 hover:text-indigo-600 dark:hover:text-indigo-400 transition-colors duration-300">
                 <i class="ri-linkedin-box-fill text-2xl"></i>
               </a>
-              <a href="#" class="text-gray-600 dark:text-gray-400 hover:text-indigo-600 dark:hover:text-indigo-400 transition-colors duration-300">
+              <a href="https://www.instagram.com/raevandhani/" target="_blank" rel="noopener noreferrer"
+                 class="text-gray-600 dark:text-gray-400 hover:text-indigo-600 dark:hover:text-indigo-400 transition-colors duration-300">
                 <i class="ri-instagram-fill text-2xl"></i>
               </a>
-              <a href="https://wa.me/6288801317841" class="text-gray-600 dark:text-gray-400 hover:text-indigo-600 dark:hover:text-indigo-400 transition-colors duration-300">
+              <a href="https://wa.me/6288801317841" target="_blank" rel="noopener noreferrer"
+                 class="text-gray-600 dark:text-gray-400 hover:text-indigo-600 dark:hover:text-indigo-400 transition-colors duration-300">
                 <i class="ri-whatsapp-fill text-2xl"></i>
               </a>
             </div>
@@ -424,16 +428,16 @@
                   </div>
                 </div>
                 <div class="flex space-x-4 mt-8">
-                  <a href="https://github.com/Raevandhani" class="w-10 h-10 bg-gray-200 dark:bg-gray-700 rounded-full flex items-center justify-center text-gray-700 dark:text-gray-300 hover:bg-indigo-600 dark:hover:bg-indigo-500 hover:text-white transition-colors duration-300">
+                  <a href="https://github.com/Raevandhani" target="_blank" rel="noopener noreferrer" class="w-10 h-10 bg-gray-200 dark:bg-gray-700 rounded-full flex items-center justify-center text-gray-700 dark:text-gray-300 hover:bg-indigo-600 dark:hover:bg-indigo-500 hover:text-white transition-colors duration-300">
                     <i class="ri-github-fill"></i>
                   </a>
-                  <a href="https://www.linkedin.com/in/raevandhanifattan" class="w-10 h-10 bg-gray-200 dark:bg-gray-700 rounded-full flex items-center justify-center text-gray-700 dark:text-gray-300 hover:bg-indigo-600 dark:hover:bg-indigo-500 hover:text-white transition-colors duration-300">
+                  <a href="https://www.linkedin.com/in/raevandhanifattan" target="_blank" rel="noopener noreferrer" class="w-10 h-10 bg-gray-200 dark:bg-gray-700 rounded-full flex items-center justify-center text-gray-700 dark:text-gray-300 hover:bg-indigo-600 dark:hover:bg-indigo-500 hover:text-white transition-colors duration-300">
                     <i class="ri-linkedin-box-fill"></i>
                   </a>
-                  <a href="" class="w-10 h-10 bg-gray-200 dark:bg-gray-700 rounded-full flex items-center justify-center text-gray-700 dark:text-gray-300 hover:bg-indigo-600 dark:hover:bg-indigo-500 hover:text-white transition-colors duration-300">
+                  <a href="https://www.instagram.com/raevandhani/" target="_blank" rel="noopener noreferrer" class="w-10 h-10 bg-gray-200 dark:bg-gray-700 rounded-full flex items-center justify-center text-gray-700 dark:text-gray-300 hover:bg-indigo-600 dark:hover:bg-indigo-500 hover:text-white transition-colors duration-300">
                     <i class="ri-instagram-fill"></i>
                   </a>
-                  <a href="https://wa.me/6288801317841" class="w-10 h-10 bg-gray-200 dark:bg-gray-700 rounded-full flex items-center justify-center text-gray-700 dark:text-gray-300 hover:bg-indigo-600 dark:hover:bg-indigo-500 hover:text-white transition-colors duration-300">
+                  <a href="https://wa.me/6288801317841" target="_blank" rel="noopener noreferrer" class="w-10 h-10 bg-gray-200 dark:bg-gray-700 rounded-full flex items-center justify-center text-gray-700 dark:text-gray-300 hover:bg-indigo-600 dark:hover:bg-indigo-500 hover:text-white transition-colors duration-300">
                     <i class="ri-whatsapp-fill"></i>
                   </a>
                 </div>
@@ -459,7 +463,7 @@
                   </div>
 
                   <!-- FormSubmit Extra -->
-                  <input type="hidden" name="_cc" value="raevandhanifattan.itxpro@email.com">
+                  <input type="hidden" name="_cc" value="raevandhanifattan.itxpro@gmail.com">
                   <input type="hidden" name="_template" value="table">
 
                   <button type="submit" class="text-sm w-full px-6 py-3 bg-indigo-600 dark:bg-indigo-500 text-white rounded-lg hover:bg-indigo-700 dark:hover:bg-indigo-600 transition-colors duration-300">
